# termgfx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  README.md  animation-showcase.sh  demo-animated.sh  demo-input.md  demo.script  demo.sh
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
demo/: demo.sh
demo/web/: index.html
docs/: COMPETITORS.md  UX-ANALYSIS.md  demo.html  index.html
docs/gifs/: box.tape  charts.tape  extras.tape  hero.tape  progress.tape
docs/pkg/: LICENSE  package.json  termgfx.d.ts  termgfx.js  termgfx_bg.wasm  termgfx_bg.wasm.d.ts
examples/: form-config.json
scripts/: competitor-demo.sh  demo-studio.sh  install-zsh-plugin.sh  plotext-demo.py  record-studio-demo.sh  v0.3.0-demo.sh  v0.4.0-demo.sh
src/: lib.rs  main.rs  script.rs
src/animation/: demo.rs  effects.rs  engine.rs  mod.rs
src/charts/: bar.rs  line.rs  mod.rs  pie.rs  sparkline.rs
src/design/: colors.rs  mod.rs  presets.rs  spacing.rs  theme.rs
src/export/: mod.rs  svg.rs
src/image/: mod.rs
src/interactive/: choose.rs  confirm.rs  file.rs  filter.rs  form.rs  input.rs  mod.rs  pager.rs  playground.rs  select.rs  tui.rs  wizard.rs
src/interactive/studio/: app.rs  layout.rs  mod.rs  registry.rs  storage.rs  ui.rs  widgets.rs
src/output/: banner.rs  checklist.rs  dashboard.rs  diff.rs  gauge.rs  heatmap.rs  layout.rs  mod.rs  notification.rs  palette.rs  preview.rs  progress.rs  record.rs  regex_filter.rs  spinner.rs  stats.rs  style.rs  styled_box.rs  table.rs  timeline.rs  tree.rs  typewriter.rs  watch.rs
tests/: e2e_animation.rs  e2e_animation_timing.rs  e2e_animations.rs  e2e_charts.rs  e2e_checklist.rs  e2e_cli.rs  e2e_danger_zone.rs  e2e_dashboard.rs  e2e_data.rs  e2e_export.rs  e2e_form.rs  e2e_gauge.rs  e2e_heatmap.rs  e2e_interactive.rs  e2e_layout.rs  e2e_media.rs  e2e_notification.rs  e2e_output.rs  e2e_playground.rs  e2e_preview.rs  e2e_regex_filter.rs  e2e_sixel.rs  e2e_stats.rs  e2e_studio.rs  e2e_style.rs  e2e_theme.rs  e2e_timeline.rs  e2e_tty.rs  e2e_tui.rs  e2e_watch.rs  e2e_wizard.rs
zsh-plugin/: termgfx.plugin.zsh
