[package]
name = "termgfx"
version = "0.4.0"
edition = "2021"
authors = ["Youssef Bouhjira <youssef.bouhjira@gmail.com>"]
description = "Beautiful terminal graphics for CLI applications - styled boxes, charts, images, and interactive prompts"
license = "MIT"
repository = "https://github.com/ybouhjira/termgfx"
homepage = "https://github.com/ybouhjira/termgfx"
documentation = "https://docs.rs/termgfx"
readme = "README.md"
keywords = ["cli", "terminal", "tui", "graphics", "charts"]
categories = ["command-line-interface", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["clap", "crossterm", "ratatui", "ratatui-image", "image", "ureq", "ctrlc", "termion", "libc", "atty"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "web-sys"]

[dependencies]
# CLI parsing (optional - CLI only)
clap = { version = "4.5", features = ["derive", "color"], optional = true }

# TUI framework (optional - CLI only)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Image support (optional - CLI only)
ratatui-image = { version = "3.0", optional = true }
image = { version = "0.25", optional = true }
ureq = { version = "2.9", optional = true }

# Colors and styling (always included)
owo-colors = "4.1"
unicode-width = "0.2"

# Serialization (always included)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (always included)
thiserror = "2.0"
anyhow = "1.0"

# Signal handling (optional - CLI only)
ctrlc = { version = "3.4", optional = true }
similar = "2.7.0"
termion = { version = "4.0.6", optional = true }
libc = { version = "0.2.178", optional = true }
atty = { version = "0.2", optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
insta = "1.41"
rexpect = "0.5"  # PTY-based testing for interactive commands

[[bin]]
name = "termgfx"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
